[package]
name = "grc"
version = "1.2.2"
authors = ["sdttttt <sdttttt@outlook.com>"]
description = "Similar to git-cz, gcr will help you to provide a better Git experience."
readme = "README.md"
exclude = ["/.github/", "/rustfmt.toml", "/.chglog"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sdttttt/gcr.git"
keywords = ["git-cz", "git", "cli", "commit"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
clap = "2.34.0"
console = "0.15.0"
dialoguer = "0.10.0"
git2 = "0.14"
toml = "0.5.9"
edit = "0.1.3"
serde = { version = "1.0.82", features = ["derive"] }

[dev-dependencies]
cargo-husky = "1.5.0"
