[package]
name = "grc"
version = "1.3.1"
authors = ["sdttttt <sdttttt@outlook.com>"]
description = "Similar to git-cz, gcr will help you to provide a better Git experience."
readme = "README.md"
exclude = ["/.github/", "/rustfmt.toml", "/.chglog"]
edition = "2021"
license = "Unlicense"
repository = "https://github.com/sdttttt/gcr.git"
keywords = ["git-cz", "git", "cli", "commit"]
categories = ["command-line-utilities"]
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[features]
plug = []

[dependencies]
clap = "4.0.28"
console = "0.15.0"
dialoguer = { version = "0.10.1", features = ["editor", "fuzzy-select"] }
git2 = "0.14.4"
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"

[dev-dependencies]
rusty-hook = "^0.11.2"
